<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.srv.sumit.spinnerexample.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/imageview"
        android:layout_margin="16dp"
        android:layout_height="100dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/spinner"
        android:layout_height="45dp"
        android:entries="@array/dishes"
        android:layout_margin="20dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nonveg"
        android:visibility="gone">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chicken"
            android:id="@+id/chicken"
            android:layout_margin="8dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fish"
            android:id="@+id/fish"
            android:layout_margin="8dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mutton"
            android:id="@+id/mutton"
            android:layout_margin="8dp"/>
    </RadioGroup>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/veg"
        android:visibility="gone">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paneer"
            android:id="@+id/panner"
            android:layout_margin="8dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mix"
            android:id="@+id/mix"
            android:layout_margin="8dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manchurian"
            android:id="@+id/manchurian"
            android:layout_margin="8dp"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Your Order"
        android:id="@+id/order"/>

</LinearLayout>
